# collaborative-zksnark

./: Cargo.toml
marlin/: Cargo.toml
mpc-algebra/: Cargo.toml
mpc-algebra/examples/: gsz20.rs
mpc-algebra/src/: channel.rs  com.rs  group.rs  lib.rs
mpc-algebra/src/share/: add.rs  field.rs  group.rs  mod.rs  msm.rs  pairing.rs  spdz.rs
mpc-algebra/src/wire/: field.rs  group.rs  macros.rs  mod.rs
mpc-net/: Cargo.toml
mpc-net/examples/: broadcast.rs
mpc-net/src/: multi.rs
mpc-snarks/: Cargo.toml
mpc-trait/: Cargo.toml
mpc-trait/src/: lib.rs
