[package]
name = "ark-marlin"
version = "0.2.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "arkworks contributors"
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/arkworks-rs/marlin"
documentation = "https://docs.rs/ark-marlin/"
keywords = ["cryptography", "commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false, features = [ "print-trace", "std" ] }
ark-poly-commit = { version = "0.4.0", default-features = false, features = [ "print-trace", "std" ] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
lazy_static = "1"
once_cell = "1.8"
derivative = { version = "2.0", features = ["use_core"]}
log = {version = "0.4"}
digest = { version = "0.10" }

rand = { version = "0.8", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
blake2 = { version = "0.10" }
mpc-net = { path = "../mpc-net" }
mpc-algebra = { path = "../mpc-algebra" }
mpc-trait = { path = "../mpc-trait" }



[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[profile.dev]
opt-level = 0
panic = 'abort'

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std", "ark-poly-commit/std" ]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-poly-commit/parallel", "rayon" ]

[[bench]]
name = "marlin-benches"
path = "benches/bench.rs"
harness = false
required-features = ["std"]
