[package]
name = "mpc-snarks"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false, features = [ "print-trace", "std" ] }
ark-poly-commit = { version = "0.4.0", default-features = false, features = [ "print-trace", "std" ] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
lazy_static = "1"
once_cell = "1.8"
derivative = { version = "2.0", features = ["use_core"]}
log = {version = "0.4"}
digest = { version = "0.10" }

rand = { version = "0.8", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
blake2 = { version = "0.10" }
mpc-net = { path = "../mpc-net" }
mpc-algebra = { path = "../mpc-algebra" }
mpc-trait = { path = "../mpc-trait" }


ark-groth16 = { path = "../groth16", version = "0.4.0", default-features = false, features = [ "std" ] }
ark-marlin = { path = "../marlin", version = "0.4.0", default-features = false, features = [ "std" ] }


mpc-plonk = { path = "../mpc-plonk" }

env_logger = "0.10"
structopt = "0.3"
clap = "2"
merlin = "3"
sha2 = "0.10"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "proof"
path = "src/proof.rs"

[profile.release]
debug = true
